--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -4,3 +4,6 @@ body{
     background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     
 }
+#containerApp{
+    display: none;
+}
